feat [JS] Aggiunto generatore griglia

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
               GENERA GRIGLIA
             </button>
           </div>
-          <div class="container-fluid py-4" id="gridContainer"></div>
+          <div
+            class="container-fluid py-4 d-flex justify-content-center"
+            id="gridContainer"
+          ></div>
         </div>
       </div>
     </div>
