--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
     <!-- ....Js script.... -->
     <script src="index.js" defer async></script>
   </head>
+
+  <!--...................................................-->
+
   <body class="vh-100 align-items-center">
     <div class="navbar bg-light shadow-sm px-3">
       Grid Generator
-      <button class="btn rounded btn-light border" id="btnGridGenerator">
-        GENERA GRIGLIA
-      </button>
+      <select class="btn rounded btn-light border" id="btnGridGenerator">
+        <option value="#" selected disabled>Livello di difficoltà</option>
+        <option value="easy">Easy</option>
+        <option value="medium">Medium</option>
+        <option value="hard">Hard</option>
+      </select>
     </div>
     <div class="container-fluid my-5">
       <div class="row justify-content-center">
