--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
     <script src="index.js" defer async></script>
   </head>
 
-  <!--...................................................-->
+  <!-------------------------------------------------->
 
-  <body class="vh-100 align-items-center">
-    <header>
+  <body>
+    <!-- header -->
+    <header class="navBar--height">
       <div class="navbar bg-light shadow-sm px-3">
-        <span>Grid Generator</span>
+        <span>Campo Minato</span>
         <div class="nav gap-3">
-          <button class="btn btn-dark rounded" id="btnResetGrid">Reset</button>
+          <button class="btn btn-dark rounded" id="btnSetGrid">Set Grid</button>
           <select class="btn rounded btn-light border" id="btnGridGenerator">
             <option value="#" selected disabled>Livello di difficoltà</option>
             <option value="easy">Easy</option>
@@ -35,9 +36,13 @@
         </div>
       </div>
     </header>
-    <main>
-      <div class="container-fluid my-5 p-0 bg-primary">
+    <!-- main -->
+    <main class="d-flex main--height align-items-center">
+      <div class="container-fluid my-5 p-0">
         <div class="row justify-content-center p-0">
+          <p class="text-center">
+            * La griglia si genera solo al reload della pagina *
+          </p>
           <div class="col-11 col-md-5 col-lg-4 p-0">
             <div class="d-flex justify-content-center" id="gridContainer"></div>
           </div>
