feat[JS] WORKAROUND: Bottone Reset che ricarica la pagina

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
       <div class="navbar bg-light shadow-sm px-3">
         <span>Campo Minato</span>
         <div class="nav gap-3">
-          <button class="btn btn-dark rounded" id="btnSetGrid">Set Grid</button>
+          <button class="btn btn-success rounded" id="btnSetGrid">
+            Set Grid
+          </button>
+          <button class="btn btn-danger rounded" id="btnResetGrid">
+            Reset Grid
+          </button>
           <select class="btn rounded btn-light border" id="btnGridGenerator">
             <option value="#" selected disabled>Livello di difficoltà</option>
             <option value="easy">Easy</option>
