feat[JS] Bottoni reattivi

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <main class="d-flex main--height align-items-center">
       <div class="container-fluid my-5 p-0">
         <div class="row justify-content-center p-0">
-          <p class="text-center">
-            * La griglia si genera solo al reload della pagina *
+          <p class="text-center" id="textHeader">
+            Press [ Set grid ] to generate Playground
           </p>
           <div class="col-11 col-md-5 col-lg-4 p-0">
             <div class="d-flex justify-content-center" id="gridContainer"></div>
